@startuml

'==================== USED MODULES ==========================

package "modbusx.register_map" {
    class RegisterEntry {
        - addr: int
        - reg_type: str
        - value: int
        - alias: str
        - comment: str
        - units: str
    }
    class RegisterMap {
        + add_block(type, start, size, default_value)
        + as_pymodbus_array(type): (start_addr, arr)
        + find_entry_by_addr(type, addr): RegisterEntry
        + all_entries(type): List<RegisterEntry>
        + to_meta_list()
    }
}

package "modbusx.logger" {
    class Logger {
        + log(msg: str)
        + message_signal: pyqtSignal
    }
}

package "modbusx.slave_server" {
    class MultiUnitModbusServerThread {
        - port: int
        - unit_definitions: dict
        - loop
        - _server
        + status_signal: pyqtSignal
        + error_signal: pyqtSignal
        + start()
        + stop()
        + run()
    }
}

package "modbusx.ui" {
    class MainWindow <<QMainWindow>> {
        - treeView: QTreeView
        - tree_model: QStandardItemModel
        - reg_table_model: QStandardItemModel
        + show_connect_dialog()
        + add_connection()
        + open_selected_connection()
        + close_selected_connection()
        + add_slave_to_selected_connection()
        + add_reggroup_to_selected_slave()
        + on_tree_selection_changed()
        + append_to_log_widget()
        ...
    }

    class ConnectDialog <<QDialog>> {
        - settings: dict
        + on_ok()
    }

    class SlaveControl <<QGroupBox>> {
        - idx: int
        - port: int
        - address: str
        - unit_data: dict
        + add_unit_row()
        + start_server()
        + stop_server()
        + handle_remove_server()
        + log()
    }
}

'=================== RELATIONSHIPS ============================

' MainWindow is wired up with everything
MainWindow ..> RegisterMap       : per-slave
MainWindow ..> MultiUnitModbusServerThread : starts/controls
MainWindow ..> ConnectDialog     : launches
MainWindow ..> Logger            : logs/receives message_signal

MultiUnitModbusServerThread ..> RegisterMap : uses register data arrays

' Dialog is only used from MainWindow
ConnectDialog ..> MainWindow : parent

' SlaveControl is independently used as widget for per-port server
SlaveControl ..> RegisterMap
SlaveControl ..> MultiUnitModbusServerThread

' Logger is observable signal/slot for logging messages
Logger ..> MainWindow : message_signal

@enduml